# chess-software-engineering

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  sonar-project.properties
bot/: main.py  pyproject.toml
code/: main.js  package.json
code/backend/: .gitignore  Dockerfile  README.md  default_config.yaml  pyproject.toml
code/backend/backend/: __init__.py  config.py
code/backend/backend/bot/: chatbot.py  connect_with_gianlo_team.py  darkboard_adapter.py  mcts.py
code/backend/backend/bot/data/: MCST_player_config.py  enums.py  game_state_input.py  game_state_output.py
code/backend/backend/database/: database.py  models.py  utils.py  utils_elo.py
code/backend/backend/engine/: README.md  __init__.py  board.py  const.py  enums.py  errors.py  game.py  helpers.py
code/backend/backend/engine/figures/: __init__.py  bishop.py  figure.py  king.py  knight.py  pawn.py  queen.py  rook.py
code/backend/backend/game/: ChessGame.py  ChessGameManager.py  chess_game.py  chess_game_manager.py  interactive_player_manager.py  test_v1_chess_game.py  utils.py  v1_chess_game.py  v1_chess_game_manager.py  v1_socket_manager.py  v1_timer.py
code/backend/backend/game/players/: manual_move_player.py  player.py  random_player.py
code/backend/backend/routes/: __init__.py  auth.py  exception.py  game.py  game_old.py  test.py
code/backend/backend/routes/darkboard/: darkboardgame.py  data.py  game.py
code/backend/backend/routes/game/: data.py  exception.py  game.py
code/backend/backend/routes/old/: game.py  game_old.py  user.py
code/backend/backend/routes/user/: data.py  user.py
code/backend/tests/: __init__.py  test_api_game.py  test_api_production.py  test_auth.py  test_chess_game.py  test_chess_game2.py  test_chess_game_manager.py  test_engine.py  test_mcts.py  test_routes.py  test_routes_game.py  test_routes_user.py  test_socket_manager.py  test_utils.py
code/bot/: Dockerfile  README.md  api_utils.py  bot.py  config.py  game_loop.py  pyproject.toml  texts.py  utils.py  ws_utils.py
code/bot/bot/: __init__.py  api_utils.py  config.py  display_board.py  game_loop.py  texts.py  utils.py  ws_utils.py
code/bot/bot/src/: ballot_box_collection.py  game_mapper.py  singleton.py  user_mapper.py  valid_moves_mapper.py
code/bot/src/: GameMapper.py  UserMapper.py  ballot_box_collection.py  game.py  game_mapper.py  service.py  singleton.py  user_mapper.py  vote_mapper.py
code/bot/tests/: __init__.py  test_api.py  test_display_board.py  test_service.py  test_utils.py  test_websocket.py
code/frontend/: .env  .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile  README.md  commitlint.config.cjs  index.html  package-lock.json  package.json  pro.json  tsconfig.json  vite.config.ts
code/frontend/.husky/: commit-msg  pre-commit
code/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
code/frontend/src/components/: Icon.tsx  Layout.tsx  RouterDevtools.tsx
code/frontend/src/config/: index.ts
code/frontend/src/features/auth/: index.ts
code/frontend/src/features/chessboard/: index.ts
code/frontend/src/features/hooks/: usePersistState.ts
code/frontend/src/features/social/: index.ts
code/frontend/src/features/user/: index.ts
code/frontend/src/hooks/: usePersistState.ts
code/frontend/src/lib/: axios.ts  context.ts  react-query.ts  tokenContext.tsx
code/frontend/src/routes/: auth.tsx  game.tsx  index.tsx  leaderboard.tsx  profile.tsx
code/frontend/src/types/: index.ts
database/: sprint-2-dump.sql
doc/: README.md  Relazione_escape_the_bomb.md  Relazione_scramble.md  Tecnologie.md  analisi-chess-variants.md  analisi-social.md  deliverables_0.md  deployment.md  readme.md
doc/teambuilding/: escape-the-boom.md  escape_the_bomb.md  scrumble.md
frontend/: package-lock.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
infra/: Dockerfile  ansible.cfg  build.sh  deploy.sh  docker-compose.yaml  hosts  install.yaml  readme.md  webhook_listener.js
infra/databse/: docker-compose.yaml
infra/files/: chess_website.service.j2  gitlab_webhook.service.j2
infra/gitlab/: docker-compose.yml
infra/mattermost-docker/docker/: .env  docker-compose.nginx.yml
infra/nginx/: docker-compose.yml  errorpages.conf  nginx.conf
infra/nginx/proxy_home/: index.html
infra/nginx/proxy_home/css/: style.css
infra/nginx/proxy_home/error/: maintenance.html
infra/sonarqube/: docker-compose.yml
infra/taiga-docker/: docker-compose-inits.yml  docker-compose.yml
infra/webhook/: Dockerfile  docker-compose.yaml  webhook.py
test/: README.md
(+51 files in other folders)
