[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Giovanni Spadaccini <giospadaccini74@gmail.com>, Angelo Huang <huangelo02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pyyaml = "^6.0.1"
pylint = "^3.0.2"
open-spiel = "^1.3"
python-chess = "^1.999"

[tool.poetry.group.test.dependencies]
requests = "^2.31.0"
coverage = "^7.3.2"

[tool.poetry.scripts]
start = 'backend:start'
tests = 'tests:tests'

[tool.coverage.run]
branch = true
source = ["backend"]
command_line = "-m unittest"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
