[tool.poetry]
name = "bot"
version = "0.1.0"
description = "A bot that implements all the steps to communicate with the telegram API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.14.0"
python-dotenv = "^1.0.0"
python-chess = "^1.999"
cairosvg = "^2.7.1"
asyncio = "^3.4.3"
aiohttp = "^3.9.1"

[tool.poetry.scripts]
start = "bot:start"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --capture=no"
testpaths = [
    "tests",
]
pythonpath = "." # adds the current directory to sys.path